<resources>
    <string name="app_name">TutorMe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="my_schedule">My Schedule</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="student_choice">Student</string>
    <string name="tutor_choice">Tutor</string>
    <string name="welcome_message">Welcome Mark</string>
    <string name="logo_description">Tutor Me Logo</string>
    <string name="location_prompt">Locations</string>
    <string name="subject_prompt">Subjects</string>
    <string name="upcomingName">Name:</string>
    <string name="upcomingAddress">Address:</string>
    <string name="upcomingDate">Date:</string>
    <string name="upcomingTime">Time:</string>
    <string name="upcomingDetails">More Details...</string>
    <string name="search_title">Tutor Search</string>
    <string name="loc_spinner_title">Location</string>
    <string name="subj_spinner_title">Subject</string>
    <string name="search_options">Advanced Options...</string>
    <string name="search_button">Search</string>
    <string name="username_hint">Username</string>
    <string name="create_account">Create Account</string>
    <string name="login_link">Already a member? Login</string>
    <string name="time_input">Time</string>
    <string name="messageTitle">Messages</string>
    <string name="submit">Submit</string>
    <string name="all_messages">View All Messages...</string>
    <string name="upcomingGrindsTitle">Upcoming Grinds</string>
    <string name="schedule_title">Schedule</string>
    <string name="recent_messages_title">Recent Messages</string>
    <string name="headshot_descrip">Picture of a tutor</string>
    <string name="recent_tutor_message">James Burke has sent you a message.</string>
    <string name="advanced_search_title">Advanced Search</string>
    <string name="date_title">Date</string>
    <string name="newSearch">New Search</string>
    <string name="view_profile">View Profile...</string>
    <string name="upcomingSubject">Subject:</string>
    <string name="upcomingPrice">Price:</string>
    <string name="upcomingEmail">Email:</string>
    <string name="upcomingPhone">Phone:</string>
    <string name="tutor_bio">Hi! My name is James. I am a maths tutor based in Dublin 12. I have a masters degree in physics and have been tutoring for the past four years. If you would like to book a grind please do and we can organise any arrangements from there.</string>
    <string name="grind_request">Request Grind</string>
    <string name="submit_request">Submit Request</string>
    <string name="tutor_name">James Connolly</string>
    <string name="tutor_subject">Subject: Maths</string>
    <string name="tutor_qualification">Qualification: Masters</string>


    <string-array name="times">
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
    </string-array>


    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="locations">
        <item>Clare</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Leitrim</item>
        <item>Mayo</item>
        <item>Roscommon</item>
        <item>Sligo</item>
    </string-array>

    <string-array name="subjects">
        <item>Business</item>
        <item>English</item>
        <item>Economics</item>
        <item>Geography</item>
        <item>History</item>
        <item>Irish</item>
        <item>Maths</item>
        <item>Spanish</item>
        <item>Technical Graphics</item>
    </string-array>


</resources>
