<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/upcomingGrindsTitle"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:padding="5dp"
            android:fontFamily="@string/abc_font_family_display_4_material"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:id="@+id/UpcomingGrinds">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingName"
                android:id="@+id/GrindName"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingAddress"
                android:id="@+id/GrindAddress"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingEmail"
                android:id="@+id/GrindEmail"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingPhone"
                android:id="@+id/GrindPhone"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingDate"
                android:id="@+id/GrindDate"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingTime"
                android:id="@+id/GrindTime"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingSubject"
                android:id="@+id/GrindSubject"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcomingPrice"
                android:id="@+id/GrindPrice"
                android:padding="5dp" />

        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tutor_profile"
            android:clickable="true">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:id="@+id/tutor_profiler"
            android:clickable="true"
            android:background="@drawable/home_bottom_border">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingStart="5dp">

                <TextView
                    android:text="Name: James"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameView"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:text="Subject: Maths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subjectView"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:text="Qualification: Masters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/qualView"
                    android:paddingBottom="5dp"/>

                <RatingBar
                    android:id="@+id/ratingBarView"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="45dp"
                    android:max="5"
                    android:numStars="5"
                    android:rating="4.0"
                    android:stepSize="0.0"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:text="View Profile..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/extraDetailsView"
                    android:textColor="#0645AD"
                    android:paddingBottom="5dp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/headshot1"
                android:id="@+id/imageView4"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>
<!--
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/map"
        tools:context=".Test"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
-->

</ScrollView>