<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topSection"
            android:gravity="center"
            android:background="#ededed"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="40dp">
            <!-- android:background="@mipmap/ic_background" -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcome_message"
                    android:id="@+id/WelcomeMessage"
                    android:textColor="#363636"
                    android:textSize="25sp"
                    android:paddingBottom="20dp"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:gravity="center_vertical" />

                <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_description"
                android:adjustViewBounds="true"
                android:maxWidth="120dp"
                android:maxHeight="120dp"
                android:scaleType="fitCenter"
                android:id="@+id/imageView2"
                android:src="@mipmap/ic_tutor_me_logo"
                android:layout_weight="2"/>

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UpcomingGrinds"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="30dp"
            android:paddingTop="25dp"
            android:background="@drawable/home_bottom_border">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Upcoming Grinds"
                android:id="@+id/UpcomingGrindsTitle"
                android:textAlignment="center"
                android:fontFamily="@string/abc_font_family_display_4_material" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcomingName"
                    android:id="@+id/GrindName"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcomingAddress"
                    android:id="@+id/GrindAddress"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcomingDate"
                    android:id="@+id/GrindDate"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcomingTime"
                    android:id="@+id/GrindTime"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcomingDetails"
                    android:id="@+id/GrindMoreDetails"
                    android:padding="5dp"
                    android:textColor="#0645AD"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TutorSearch"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingRight="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:background="@drawable/home_bottom_border">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/search_title"
                android:id="@+id/TutorSearchTitle"
                android:fontFamily="@string/abc_font_family_display_4_material"
                android:textAlignment="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/loc_spinner_title"
                        android:id="@+id/LocationSearchHeading"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ededed"
                        android:layout_marginRight="10dp">
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/location_spinner"
                        android:entries="@array/locations"
                        android:prompt="@string/location_prompt"
                        android:padding="5dp"
                        android:spinnerMode="dropdown" />

                    </RelativeLayout>



                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/subj_spinner_title"
                        android:id="@+id/SubjectSearchHeading"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ededed"
                        android:layout_marginLeft="10dp">

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/subject_spinner"
                        android:entries="@array/subjects"
                        android:prompt="@string/subject_prompt"
                        android:padding="5dp"
                        android:spinnerMode="dropdown" />

                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_options"
                    android:id="@+id/tSearchAdvanced"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:autoLink="all"
                    android:padding="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#0645AD"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_button"
                    android:id="@+id/tSearchButton"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:paddingTop="10dp"
                    android:background="@drawable/green_button"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/Schedule"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:paddingEnd="30dp"
            android:paddingStart="20dp"
            android:background="@drawable/home_bottom_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Schedule"
                android:id="@+id/ScheduleTitle"
                android:fontFamily="@string/abc_font_family_display_4_material"
                android:textAlignment="center"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:id="@+id/ScheduleView">

                <CalendarView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ScheduleCalendar" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>