<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Body">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SearchBox"
            android:paddingBottom="10dp"
            android:background="@drawable/home_bottom_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/newSearch"
                android:id="@+id/New_Search"
                android:textAlignment="textStart"
                android:gravity="start"
                android:fontFamily="@string/abc_font_family_display_4_material"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">


                <TextView
                    android:text="@string/location_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_search_location"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:text="@string/subj_spinner_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_search_subject"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ededed"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/location_spinner"
                        android:entries="@array/locations"
                        android:prompt="@string/location_prompt"
                        android:padding="5dp"
                        android:spinnerMode="dropdown" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ededed"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/subject_spinner"
                        android:entries="@array/subjects"
                        android:prompt="@string/subject_prompt"
                        android:padding="5dp"
                        android:spinnerMode="dropdown" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search_options"
                    android:id="@+id/advanced_options_link"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:autoLink="all"
                    android:padding="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#0645AD"
                    android:gravity="bottom" />

                <Button
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_button"
                    android:id="@+id/tSearchButton"
                    android:layout_weight="1"
                    android:background="@drawable/green_button"
                    android:textColor="#FFFFFF" />



            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tutor_profiles"
            android:clickable="true">

        </LinearLayout>


    </LinearLayout>

</ScrollView>